--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html lang="ja">
 <head>
     <script src="./node_modules/angular/angular.min.js"></script>
-    <script src="app.js"></script>
+    <script src="./node_modules/angular-route/angular-route.min.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>angular-demo</title>
 </head>
-<body ng-app="Hello">
-    <div ng-controller="HelloCtrl">
-        <p>{{hello.text}}, world!</p>
+<body ng-app="ToDo">
+    <div>
+        <div ng-view></div>
     </div>
+    <script src="./js/app.js"></script>
+    <script src="./js/controllers.js"></script>
 </body>
 </html>
