--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <script src="./node_modules/angular/angular.min.js"></script>
     <script src="./node_modules/angular-route/angular-route.min.js"></script>
+    <link rel="stylesheet" href="/styke.css"></style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,5 +15,6 @@
     </div>
     <script src="./js/app.js"></script>
     <script src="./js/controllers.js"></script>
+    <script src="./js/directives.js"></script>
 </body>
 </html>
