--- a/pages/main.html
+++ b/pages/main.html
@@ -1,1 +1,11 @@
 <h1>{{title}}</h1>
+<div add-todo todos="todos"></div>
+<label><input type="radio" ng-model="doneType" value="line">取り消し線</label>
+<label><input type="radio" ng-model="doneType" value="hide">非表示</label>
+<ul ng-class="doneType">
+    <!-- ng-classにハッシュを渡すとvalue値がtrueの時だけclass名を適用する -->
+    <li ng-repeat="todo in todos" ng-class="{ done: todo.done }">
+        <label><input type="checkbox" ng-model="todo.done">{{todo.text}}</label>
+    </li>
+</ul>
+<!-- <div add-todo><input ng-model='text'><button>追　加</button></div> -->
